Rotating cube with one dice texture

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
-<html>
-   <body>
-      <canvas width = "570" height = "570" id = "my_Canvas"></canvas>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>WebGL Demo</title>
+    <link rel="stylesheet" href="webgl.css" type="text/css">
+  </head>
 
-      <script src="main.js"></script>
+  <body>
+    <canvas id="glcanvas" width="640" height="480"></canvas>
+  </body>
 
-   </body>
+  <script src="gl-matrix.js"></script>
+  <script src="main.js"></script>
 </html>
