Using Three.js now, camera moving

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>WebGL Demo</title>
-    <link rel="stylesheet" href="webgl.css" type="text/css">
-  </head>
+<head>
+   <title>Textures (Three.js)</title>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+   <link rel=stylesheet href="css/base.css"/>
+</head>
+<body>
 
-  <body>
-    <canvas id="glcanvas" width="640" height="480"></canvas>
-  </body>
+<script src="js/Three.js"></script>
+<script src="js/Detector.js"></script>
+<script src="js/Stats.js"></script>
+<script src="js/OrbitControls.js"></script>
+<script src="js/THREEx.KeyboardState.js"></script>
+<script src="js/THREEx.FullScreen.js"></script>
+<script src="js/THREEx.WindowResize.js"></script>
 
-  <script src="gl-matrix.js"></script>
-  <script src="main.js"></script>
+<div id="ThreeJS" style="position: absolute; left:0px; top:0px"></div>
+<script src="main.js"></script>
+
+</body>
 </html>
