Playing around with Physijs

--- a/index.html
+++ b/index.html
@@ -1,3 +1,30 @@
+<!-- <!DOCTYPE html>
+
+<html>
+
+<head>
+   <title>Collisions - Physijs</title>
+   
+   <link rel="stylesheet" type="text/css" href="css/styles.css" />
+   
+   <script type="text/javascript" src="js/three.min.js"></script>
+   <script type="text/javascript" src="js/stats.js"></script>
+   <script type="text/javascript" src="js/OrbitControls.js"></script>
+   <script type="text/javascript" src="physi.js"></script>
+   
+   <script src="main.js" type="text/javascript"></script>
+</head>
+
+<body>
+   <div id="heading">
+      <h1>Collisions</h1>
+      <p>Demonstrating the collision callback</p>
+   </div>
+   <div id="viewport"></div>
+</body>
+
+</html> -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,14 +37,16 @@
 
 <script src="js/Three.js"></script>
 <script src="js/Detector.js"></script>
-<script src="js/Stats.js"></script>
+<script src="js/stats.js"></script>
 <script src="js/OrbitControls.js"></script>
 <script src="js/THREEx.KeyboardState.js"></script>
 <script src="js/THREEx.FullScreen.js"></script>
 <script src="js/THREEx.WindowResize.js"></script>
 
+<script type="text/javascript" src="physi.js"></script>
+
 <div id="ThreeJS" style="position: absolute; left:0px; top:0px"></div>
-<script src="main.js"></script>
+<script src="main-three.js"></script>
 
 </body>
 </html>
