--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -8,6 +8,7 @@
    <link rel="stylesheet" type="text/css" href="css/styles.css" />
    
    <script type="text/javascript" src="js/three.min.js"></script>
+   <script src="js/THREEx.KeyboardState.js"></script>
    <script type="text/javascript" src="js/stats.js"></script>
    <script type="text/javascript" src="js/OrbitControls.js"></script>
    <script type="text/javascript" src="physi.js"></script>
@@ -23,9 +24,9 @@
    <div id="viewport"></div>
 </body>
 
-</html> -->
+</html>
 
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
    <title>Textures (Three.js)</title>
@@ -49,4 +50,4 @@
 <script src="main-three.js"></script>
 
 </body>
-</html>
+</html> -->
