Removed unused files

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
    <div id="heading">
-      <h1>Collisions</h1>
-      <p>Demonstrating the collision callback</p>
+      <h1>Falling Dice - Jorundur Jorundsson</h1>
+      <p>Use mouse/scroll to move/zoom camera. Use arrows + W/S keys to move checkerboard around.</p>
    </div>
    <div id="viewport"></div>
 </body>
