--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-   <title>Collisions - Physijs</title>
+   <title>Falling Dice - WebGL with Physijs and Three.js</title>
    
    <link rel="stylesheet" type="text/css" href="css/styles.css" />
    
